# hourly-crypto

./: .gitignore  README.md  azure.yaml  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  first-run-notice.txt
.github/: copilot-instructions.md
infra/: main.bicep
infra/app/: api.bicep
src/: algorithm.py  authentication.py  decision.py  exchange.py  function_app.py  host.json  local.settings.json  order.py  portfolio.py  price.py  prices.py  repo.py  requirements.txt  schedule.py  scheduling.py  vault.py
src/exchanges/: __init__.py  coinbase.py
src/scripts/: create_schedule_helper.py
tests/: conftest.py  test_decision.py  test_exchange.py  test_function_app.py  test_portfolio.py  test_prices.py  test_schedule_serialization.py  test_scheduling.py
